# easel

./: LICENSE  pyproject.toml
src/: main.py
src/easel/: __init__.py  data.py  data_module.py  engine.py  evaluator.py  model.py  module.py  runner.py  trainer.py
src/easel/trainer/: __init__.py  base.py  trainer.py
