[project]
name = "easel"
version = "0.0.1"
description = "A generalizable deep learning library for SL tasks."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Akshay Raman" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "numpy",
    "tqdm",
    "safetensors",
]

[build-system]
requires = ["uv_build>=0.5.0"]
build-backend = "uv_build"


[tool.uv]
package = true
